# rel

./: 404.html  CNAME  Cargo.toml  LICENSE-APACHE  README.md  TODO.md  book.toml  print.html  rel.html  rustfmt.toml  searchindex.js  searchindex.json
.github/: FUNDING.yml
.github/workflows/: gh-pages.yml
book/: SUMMARY.md  rel.md
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/heresy/: all.html  index.html  sidebar-items.js
docs/macroix/: all.html  fn.insert_type_param.html  fn.visit_fields.html  index.html  sidebar-items.js  struct.AttrValue.html
docs/mischief/: all.html  derive.Singleton.html  derive.Unique.html  fn.layout_of_val_raw.html  index.html  macro.lease_static!.html  macro.lease_static.html  macro.runtime_token!.html  macro.runtime_token.html  macro.split_unique!.html  macro.split_unique.html  sidebar-items.js  struct.Frame.html  struct.GhostRef.html  struct.In.html  struct.Lease.html  struct.RuntimeTokenError.html  struct.Slot.html  struct.StaticRef.html  struct.StaticToken.html  trait.Metadata.html  trait.Pointer.html  trait.Region.html  trait.RegionalAllocator.html  trait.RestructurablePointer.html  trait.Singleton.html  trait.Static.html  trait.Unique.html  trait.Within.html
docs/mischief_derive/: all.html  derive.Singleton.html  derive.Unique.html  index.html  sidebar-items.js
docs/munge/: all.html  index.html  macro.munge!.html  macro.munge.html  sidebar-items.js  struct.Ref.html  struct.Value.html  trait.Destructure.html  trait.Restructure.html
docs/munge_macro/: all.html  index.html  macro.munge_with_path!.html  macro.munge_with_path.html  sidebar-items.js
docs/proc_macro2/: index.html
docs/ptr_meta/: all.html  attr.pointee.html  derive.Pointee.html  fn.from_raw_parts.html  fn.from_raw_parts_mut.html  fn.metadata.html  index.html  sidebar-items.js  struct.DynMetadata.html  trait.NonNullExt.html  trait.Pointee.html  trait.PtrExt.html
docs/ptr_meta_derive/: all.html  attr.pointee.html  derive.Pointee.html  index.html  sidebar-items.js
docs/quote/: index.html
docs/raw_enum/: all.html  index.html  sidebar-items.js  struct.RawEnum.html  struct.RawIdents.html
docs/raw_enum_macro/: all.html  attr.raw_enum.html  index.html  sidebar-items.js
docs/rel_alloc/: all.html  index.html  sidebar-items.js  trait.EmplaceIn.html
docs/rel_core/: all.html  derive.Move.html  derive.Portable.html  index.html  sidebar-items.js  struct.Char.html  struct.DefaultBasis.html  struct.F32.html  struct.F64.html  struct.I128.html  struct.I16.html  struct.I32.html  struct.I64.html  (+15 more)
heresy/: Cargo.toml
macroix/: Cargo.toml
mischief/: Cargo.toml
mischief/src/: frame.rs  in.rs  lib.rs  metadata.rs  pointer.rs  region.rs  slot.rs
mischief/src/unique/: ghost_ref.rs  mod.rs  static_ref.rs  token.rs
mischief_derive/: Cargo.toml
raw_enum/: Cargo.toml
raw_enum_macro/: Cargo.toml
rel_alloc/: Cargo.toml
rel_alloc/bench_tests/: bench.rs  from_data.rs  gen.rs  test.rs
rel_alloc/bench_tests/log/: data.rs  mod.rs
rel_alloc/bench_tests/mc_savedata/: data.rs  mod.rs
rel_alloc/bench_tests/mesh/: data.rs  mod.rs
rel_alloc/src/: alloc.rs  boxed.rs  emplace_in.rs  lib.rs  string.rs  vec.rs
rel_core/: Cargo.toml
rel_core/src/: basis.rs  export.rs  lib.rs  option.rs  portable.rs  primitive.rs  rel_mem.rs  rel_ptr.rs  rel_ref.rs  rel_tuple.rs
rel_core/src/emplace/: impls.rs  mod.rs
rel_core/src/move/: impls.rs  mod.rs
rel_core_derive/: Cargo.toml
rel_example/: Cargo.toml
rel_example/src/: main.rs
rel_slab_allocator/: Cargo.toml
rel_util/: Cargo.toml
situ/: Cargo.toml
situ/src/: fmt.rs  lib.rs  mut.rs  ops.rs  owned_val.rs  pinned.rs  ref.rs  str.rs  val.rs
situ/src/alloc/: allocator.rs  mod.rs  regional.rs
situ/src/drop/: impls.rs  mod.rs
situ_derive/: Cargo.toml
(+689 files in other folders)
