[package]
name = "situ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.heresy]
version = "0.1"
path = "../heresy"
default-features = false

[dependencies.mischief]
version = "0.1"
path = "../mischief"

[dependencies.munge]
version = "0.4"
git = "https://github.com/djkoloski/munge"

[dependencies.ptr_meta]
version = "0.2"
default-features = false

[dependencies.situ_derive]
version = "0.1"
path = "../situ_derive"

[features]
default = ["alloc"]
alloc = ["heresy/alloc"]
